--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
-    "ownerNumber": "6282146218274@s.whatsapp.net", 
-    "ownerName": "Riell Official", 
-    "botName": "Khurushi-Md",
-    "footer": "© Khurushi | 2022", 
+    "ownerNumber": "62882006485504@s.whatsapp.net", 
+    "ownerName": "Farhan Ganz", 
+    "botName": "Farhan-Md",
+    "footer": "© Farhan | 2022", 
     "sessionName": "session", 
     "pathimg": "./media/logo.jpg", 
     "pathqris": "./media/qris.jpg",
-    "group": "https://chat.whatsapp.com/DHf4mb8QnmC5zynElmG2tG",
-    "yootube": "https://youtube.com/channel/UCLd-bhT8Dqq9PjGc6bWUVyg",
+    "group": "https://chat.whatsapp.com/HdpWPPVdtejKWepn0wllRS",
+    "yootube": "https://youtube.com/channel/UClkoTDqLobyJ2Ll9yO26g2A",
     "igCookie": "csrftoken=Yj80cFn0zMn6svtMdvKTBcMzMwWPsQzx; sessionid=53767158422%3A4hXJOZ2NBfcF2f%3A10; ds_user_id=53767158422;",
  
     "limitCount": 100,
